change post template message request body to camel case
